--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
+    <!-- 문서의 문자 인코딩 설정 (UTF-8 유니코드) -->
     <meta charset="UTF-8">
+    <!-- 웹사이트 favicon 설정 -->
     <link rel="icon" href="/favicon.ico">
+    <!-- 모바일 반응형 설정을 위한 viewport 메타 태그 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 페이지 제목 -->
     <title>Vue App</title>
   </head>
   <body>
+    <!-- Vue 애플리케이션이 마운트될 루트 DOM 요소 -->
     <div id="app"></div>
+    <!-- Vue 애플리케이션의 진입점 스크립트 (TypeScript 사용) -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
